--- a/src/_scss/pages/submissionsTable/_typeaheadFilter.scss
+++ b/src/_scss/pages/submissionsTable/_typeaheadFilter.scss
@@ -41,7 +41,7 @@
                 }
             }
         }
-        // REPLACE RESPONSIVE WITH BOOTSTRAP IN THE FUTURE
+        // CENTRALIZE RESPONSIVE IN THE FUTURE
         /* Small Devices, Tablets */
         @media (min-width : 768px) and (max-width : 991px) {
             input {
